// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Annotation API (E2E) > Send complex update actions and compare resulting tracing 1`] = `
{
  "additionalAxes": [],
  "createdTimestamp": "createdTimestamp",
  "editPosition": {
    "x": 256,
    "y": 256,
    "z": 128,
  },
  "editPositionAdditionalCoordinates": [],
  "editRotation": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "id": "id",
  "storedWithExternalTreeBodies": true,
  "treeGroups": [
    {
      "children": [
        {
          "children": [],
          "groupId": 3,
          "name": "Blah",
        },
        {
          "children": [],
          "groupId": 4,
          "name": "Blah 2",
        },
      ],
      "groupId": 1,
      "name": "Axon 1",
    },
  ],
  "trees": [
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 30,
          "target": 29,
        },
        {
          "source": 29,
          "target": 28,
        },
        {
          "source": 28,
          "target": 27,
        },
        {
          "source": 27,
          "target": 26,
        },
        {
          "source": 26,
          "target": 25,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 5,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 24,
          "target": 23,
        },
        {
          "source": 23,
          "target": 22,
        },
        {
          "source": 22,
          "target": 21,
        },
        {
          "source": 21,
          "target": 20,
        },
        {
          "source": 20,
          "target": 19,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 4,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 18,
          "target": 17,
        },
        {
          "source": 17,
          "target": 16,
        },
        {
          "source": 16,
          "target": 15,
        },
        {
          "source": 15,
          "target": 14,
        },
        {
          "source": 14,
          "target": 13,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 3,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 12,
          "target": 11,
        },
        {
          "source": 11,
          "target": 10,
        },
        {
          "source": 10,
          "target": 9,
        },
        {
          "source": 9,
          "target": 8,
        },
        {
          "source": 8,
          "target": 7,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 2,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 6,
          "target": 5,
        },
        {
          "source": 5,
          "target": 4,
        },
        {
          "source": 4,
          "target": 3,
        },
        {
          "source": 3,
          "target": 2,
        },
        {
          "source": 2,
          "target": 1,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 1,
      "type": "DEFAULT",
    },
  ],
  "typ": "Skeleton",
  "userBoundingBoxes": [],
  "userStates": [],
  "zoomLevel": 2,
}
`;

exports[`Annotation API (E2E) > Send update actions and compare resulting tracing 1`] = `
{
  "additionalAxes": [],
  "createdTimestamp": "createdTimestamp",
  "editPosition": {
    "x": 256,
    "y": 256,
    "z": 128,
  },
  "editPositionAdditionalCoordinates": [],
  "editRotation": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "id": "id",
  "storedWithExternalTreeBodies": true,
  "treeGroups": [],
  "trees": [],
  "typ": "Skeleton",
  "userBoundingBoxes": [],
  "userStates": [
    {
      "boundingBoxIds": [],
      "boundingBoxVisibilities": [],
      "treeGroupExpandedStates": [],
      "treeGroupIds": [],
      "treeIds": [],
      "treeVisibilities": [],
      "userId": "dummy-user-id",
    },
  ],
  "zoomLevel": 2,
}
`;

exports[`Annotation API (E2E) > Send update actions and compare resulting tracing 2`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "description": "",
  "earliestAccessibleVersion": 0,
  "userStates": [],
  "version": 1,
}
`;

exports[`Annotation API (E2E) > Update Metadata for Skeleton Tracing 1`] = `
{
  "additionalAxes": [],
  "createdTimestamp": "createdTimestamp",
  "editPosition": {
    "x": 256,
    "y": 256,
    "z": 128,
  },
  "editPositionAdditionalCoordinates": [],
  "editRotation": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "id": "id",
  "storedWithExternalTreeBodies": true,
  "treeGroups": [],
  "trees": [
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 30,
          "target": 29,
        },
        {
          "source": 29,
          "target": 28,
        },
        {
          "source": 28,
          "target": 27,
        },
        {
          "source": 27,
          "target": 26,
        },
        {
          "source": 26,
          "target": 25,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3727,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 5,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 24,
          "target": 23,
        },
        {
          "source": 23,
          "target": 22,
        },
        {
          "source": 22,
          "target": 21,
        },
        {
          "source": 21,
          "target": 20,
        },
        {
          "source": 20,
          "target": 19,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 4,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 18,
          "target": 17,
        },
        {
          "source": 17,
          "target": 16,
        },
        {
          "source": 16,
          "target": 15,
        },
        {
          "source": 15,
          "target": 14,
        },
        {
          "source": 14,
          "target": 13,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3726,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 3,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 12,
          "target": 11,
        },
        {
          "source": 11,
          "target": 10,
        },
        {
          "source": 10,
          "target": 9,
        },
        {
          "source": 9,
          "target": 8,
        },
        {
          "source": 8,
          "target": 7,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 2,
      "type": "DEFAULT",
    },
    {
      "branchPoints": [],
      "color": {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "comments": [],
      "createdTimestamp": "createdTimestamp",
      "edges": [
        {
          "source": 6,
          "target": 5,
        },
        {
          "source": 5,
          "target": 4,
        },
        {
          "source": 4,
          "target": 3,
        },
        {
          "source": 3,
          "target": 2,
        },
        {
          "source": 2,
          "target": 1,
        },
      ],
      "edgesAreVisible": true,
      "isVisible": true,
      "metadata": [
        {
          "key": "city",
          "stringListValue": [],
          "stringValue": "springfield",
        },
        {
          "key": "zip",
          "numberValue": 12345,
          "stringListValue": [],
        },
        {
          "key": "tags",
          "stringListValue": [
            "tagA",
            "tagB",
          ],
        },
      ],
      "name": "explorative_2017-10-09_SCM_Boy_023",
      "nodes": [
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 10120,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 9286,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 8453,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 7620,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 6786,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
        {
          "additionalCoordinates": [],
          "bitDepth": 4,
          "createdTimestamp": "createdTimestamp",
          "id": "id",
          "interpolation": true,
          "mag": 2,
          "position": {
            "x": 5953,
            "y": 3725,
            "z": 1545,
          },
          "radius": 112.39999389648438,
          "rotation": {
            "x": 0,
            "y": 270,
            "z": 0,
          },
          "viewport": 1,
        },
      ],
      "treeId": 1,
      "type": "DEFAULT",
    },
  ],
  "typ": "Skeleton",
  "userBoundingBoxes": [],
  "userStates": [],
  "zoomLevel": 2,
}
`;

exports[`Annotation API (E2E) > createExplorational() and finishAnnotation() 1`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {
        "branchPointCount": 0,
        "edgeCount": 0,
        "nodeCount": 0,
        "treeCount": 0,
      },
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "confocal-multi_knossos",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "59e9cfbdba632ac2ab8b23b3",
  "description": "",
  "id": "id",
  "isLockedByOwner": false,
  "modified": "modified",
  "name": "",
  "organization": "Organization_X",
  "othersMayEdit": false,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": true,
    "allowUpdate": true,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": false,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": true,
  },
  "state": "Active",
  "stats": {},
  "tags": [
    "confocal-multi_knossos",
    "skeleton",
  ],
  "task": null,
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": "tracingTime",
  "typ": "Explorational",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Internal",
}
`;

exports[`Annotation API (E2E) > editAnnotation() 1`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {
        "branchPointCount": 0,
        "edgeCount": 28965,
        "nodeCount": 28967,
        "treeCount": 2,
      },
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "2012-06-28_Cortex",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "570b9f4e4bb848d0885ee711",
  "description": "",
  "id": "id",
  "isLockedByOwner": false,
  "modified": "modified",
  "name": "new name",
  "organization": "Organization_X",
  "othersMayEdit": false,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": true,
    "allowUpdate": true,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": false,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": true,
  },
  "state": "Active",
  "stats": {},
  "tags": [
    "2012-06-28_Cortex",
    "skeleton",
  ],
  "task": null,
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": "tracingTime",
  "typ": "Explorational",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Public",
}
`;

exports[`Annotation API (E2E) > finishAnnotation() and reOpenAnnotation() for explorational 1`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {
        "branchPointCount": 0,
        "edgeCount": 28965,
        "nodeCount": 28967,
        "treeCount": 2,
      },
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "2012-06-28_Cortex",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "570b9f4e4bb848d0885ee711",
  "description": "",
  "id": "id",
  "isLockedByOwner": false,
  "messages": [
    {
      "success": "Annotation is archived",
    },
  ],
  "modified": "modified",
  "name": "",
  "organization": "Organization_X",
  "othersMayEdit": false,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": false,
    "allowUpdate": false,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": false,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": true,
  },
  "state": "Finished",
  "stats": {},
  "tags": [
    "2012-06-28_Cortex",
    "skeleton",
  ],
  "task": null,
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": "tracingTime",
  "typ": "Explorational",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Internal",
}
`;

exports[`Annotation API (E2E) > finishAnnotation() and reOpenAnnotation() for explorational 2`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {
        "branchPointCount": 0,
        "edgeCount": 28965,
        "nodeCount": 28967,
        "treeCount": 2,
      },
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "2012-06-28_Cortex",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "570b9f4e4bb848d0885ee711",
  "description": "",
  "id": "id",
  "isLockedByOwner": false,
  "messages": [
    {
      "success": "Annotation was reopened",
    },
  ],
  "modified": "modified",
  "name": "",
  "organization": "Organization_X",
  "othersMayEdit": false,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": true,
    "allowUpdate": true,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": false,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": true,
  },
  "state": "Active",
  "stats": {},
  "tags": [
    "2012-06-28_Cortex",
    "skeleton",
  ],
  "task": null,
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": "tracingTime",
  "typ": "Explorational",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Internal",
}
`;

exports[`Annotation API (E2E) > finishAnnotation() and reOpenAnnotation() for task 1`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {},
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "2012-06-28_Cortex",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "570b9f4e4bb848d0885ee711",
  "description": "",
  "id": "id",
  "isLockedByOwner": false,
  "messages": [
    {
      "success": "Task is finished",
    },
  ],
  "modified": "modified",
  "name": "",
  "organization": "Organization_X",
  "othersMayEdit": false,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": false,
    "allowUpdate": false,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": true,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": false,
  },
  "state": "Finished",
  "stats": {},
  "tags": [
    "2012-06-28_Cortex",
    "skeleton",
  ],
  "task": {
    "boundingBox": null,
    "created": "created",
    "creationInfo": null,
    "datasetId": "570b9f4e4bb848d0885ee711",
    "datasetName": "2012-06-28_Cortex",
    "editPosition": [
      0,
      0,
      0,
    ],
    "editRotation": [
      0,
      0,
      0,
    ],
    "id": "id",
    "neededExperience": {
      "domain": "abc",
      "value": 0,
    },
    "projectId": "78135bfd2faeb3190181c058",
    "projectName": "Test_Project3(for_annotation_mutations)",
    "script": null,
    "status": {
      "active": 1,
      "finished": -1,
      "pending": 10,
    },
    "team": "team_X2",
    "tracingTime": "tracingTime",
    "type": {
      "description": "Check those cells out!",
      "id": "id",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": true,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0674_BipolarCells",
      "teamId": "69882b370d889b84020efd4f",
      "teamName": "team_X2",
      "tracingType": "skeleton",
    },
  },
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": "tracingTime",
  "typ": "Task",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Internal",
}
`;

exports[`Annotation API (E2E) > finishAnnotation() and reOpenAnnotation() for task 2`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {},
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "2012-06-28_Cortex",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "570b9f4e4bb848d0885ee711",
  "description": "",
  "id": "id",
  "isLockedByOwner": false,
  "messages": [
    {
      "success": "Annotation was reopened",
    },
  ],
  "modified": "modified",
  "name": "",
  "organization": "Organization_X",
  "othersMayEdit": false,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": true,
    "allowUpdate": true,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": true,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": false,
  },
  "state": "Active",
  "stats": {},
  "tags": [
    "2012-06-28_Cortex",
    "skeleton",
  ],
  "task": {
    "boundingBox": null,
    "created": "created",
    "creationInfo": null,
    "datasetId": "570b9f4e4bb848d0885ee711",
    "datasetName": "2012-06-28_Cortex",
    "editPosition": [
      0,
      0,
      0,
    ],
    "editRotation": [
      0,
      0,
      0,
    ],
    "id": "id",
    "neededExperience": {
      "domain": "abc",
      "value": 0,
    },
    "projectId": "78135bfd2faeb3190181c058",
    "projectName": "Test_Project3(for_annotation_mutations)",
    "script": null,
    "status": {
      "active": 2,
      "finished": -2,
      "pending": 10,
    },
    "team": "team_X2",
    "tracingTime": "tracingTime",
    "type": {
      "description": "Check those cells out!",
      "id": "id",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": true,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0674_BipolarCells",
      "teamId": "69882b370d889b84020efd4f",
      "teamName": "team_X2",
      "tracingType": "skeleton",
    },
  },
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": "tracingTime",
  "typ": "Task",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Internal",
}
`;

exports[`Annotation API (E2E) > getAnnotationInformation() for public annotation while logged out 1`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {
        "branchPointCount": 0,
        "edgeCount": 28965,
        "nodeCount": 28967,
        "treeCount": 2,
      },
      "tracingId": "ae417175-f7bb-4a34-8187-d9c3b50143aa",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "2012-06-28_Cortex",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "570b9f4e4bb848d0885ee711",
  "description": "",
  "id": "88135c192faeb34c0081c05d",
  "isLockedByOwner": false,
  "modified": 0,
  "name": "",
  "organization": "Organization_X",
  "othersMayEdit": true,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "570b9f4d2a7c0e4d008da6ef",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "570b9f4b2a7c0e3b008da6ec",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "59882b370d889b84020efd3f",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "59882b370d889b84020efd6f",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": false,
    "allowUpdate": false,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": false,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": true,
  },
  "state": "Active",
  "stats": {},
  "tags": [
    "2012-06-28_Cortex",
    "skeleton",
  ],
  "task": null,
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": null,
  "typ": "Explorational",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "570b9f4d2a7c0e4d008da6ef",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "570b9f4b2a7c0e3b008da6ec",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "59882b370d889b84020efd3f",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "59882b370d889b84020efd6f",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Public",
}
`;

exports[`Annotation API (E2E) > getReadableAnnotations() 1`] = `
[
  {
    "annotationLayers": [
      {
        "name": "Skeleton",
        "stats": {
          "branchPointCount": 0,
          "edgeCount": 28965,
          "nodeCount": 28967,
          "treeCount": 2,
        },
        "tracingId": "tracingId",
        "typ": "Skeleton",
      },
    ],
    "dataSetName": "2012-06-28_Cortex",
    "description": "",
    "id": "id",
    "isLockedByOwner": false,
    "modified": "modified",
    "name": "",
    "organization": "Organization_X",
    "othersMayEdit": true,
    "owner": {
      "firstName": "user_A",
      "id": "id",
      "lastName": "last_A",
    },
    "state": "Active",
    "stats": {},
    "tags": [
      "2012-06-28_Cortex",
      "skeleton",
    ],
    "teams": [],
    "tracingTime": "tracingTime",
    "typ": "Explorational",
    "visibility": "Public",
  },
  {
    "annotationLayers": [
      {
        "name": "Skeleton",
        "stats": {
          "branchPointCount": 0,
          "edgeCount": 28965,
          "nodeCount": 28967,
          "treeCount": 2,
        },
        "tracingId": "tracingId",
        "typ": "Skeleton",
      },
    ],
    "dataSetName": "2012-06-28_Cortex",
    "description": "",
    "id": "id",
    "isLockedByOwner": false,
    "modified": "modified",
    "name": "",
    "organization": "Organization_X",
    "othersMayEdit": false,
    "owner": {
      "firstName": "user_A",
      "id": "id",
      "lastName": "last_A",
    },
    "state": "Active",
    "stats": {},
    "tags": [
      "2012-06-28_Cortex",
      "skeleton",
    ],
    "teams": [],
    "tracingTime": "tracingTime",
    "typ": "Explorational",
    "visibility": "Internal",
  },
  {
    "annotationLayers": [
      {
        "name": "Skeleton",
        "stats": {
          "branchPointCount": 0,
          "edgeCount": 28965,
          "nodeCount": 28967,
          "treeCount": 2,
        },
        "tracingId": "tracingId",
        "typ": "Skeleton",
      },
    ],
    "dataSetName": "2012-06-28_Cortex",
    "description": "",
    "id": "id",
    "isLockedByOwner": false,
    "modified": "modified",
    "name": "",
    "organization": "Organization_X",
    "othersMayEdit": false,
    "owner": {
      "firstName": "user_A",
      "id": "id",
      "lastName": "last_A",
    },
    "state": "Active",
    "stats": {},
    "tags": [
      "2012-06-28_Cortex",
      "skeleton",
    ],
    "teams": [],
    "tracingTime": "tracingTime",
    "typ": "Explorational",
    "visibility": "Internal",
  },
]
`;

exports[`Annotation API (E2E) > getTracingsForAnnotation() 1`] = `
{
  "additionalAxes": [],
  "createdTimestamp": "createdTimestamp",
  "editPosition": {
    "x": 256,
    "y": 256,
    "z": 128,
  },
  "editPositionAdditionalCoordinates": [],
  "editRotation": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "id": "id",
  "storedWithExternalTreeBodies": true,
  "treeGroups": [],
  "trees": [],
  "typ": "Skeleton",
  "userBoundingBoxes": [],
  "userStates": [],
  "zoomLevel": 2,
}
`;

exports[`Annotation API (E2E) > getTracingsForAnnotation() for hybrid 1`] = `
{
  "skeleton": {
    "additionalAxes": [],
    "createdTimestamp": "createdTimestamp",
    "editPosition": {
      "x": 256,
      "y": 256,
      "z": 128,
    },
    "editPositionAdditionalCoordinates": [],
    "editRotation": {
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "id": "id",
    "storedWithExternalTreeBodies": true,
    "treeGroups": [],
    "trees": [],
    "typ": "Skeleton",
    "userBoundingBoxes": [],
    "userStates": [],
    "zoomLevel": 2,
  },
  "volume": {
    "additionalAxes": [],
    "boundingBox": {
      "depth": 256,
      "height": 512,
      "topLeft": {
        "x": 0,
        "y": 0,
        "z": 0,
      },
      "width": 512,
    },
    "createdTimestamp": "createdTimestamp",
    "editPosition": {
      "x": 256,
      "y": 256,
      "z": 128,
    },
    "editPositionAdditionalCoordinates": [],
    "editRotation": {
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "elementClass": "uint32",
    "hasSegmentIndex": true,
    "id": "id",
    "largestSegmentId": 0,
    "mags": [
      {
        "x": 1,
        "y": 1,
        "z": 1,
      },
      {
        "x": 2,
        "y": 2,
        "z": 2,
      },
      {
        "x": 4,
        "y": 4,
        "z": 4,
      },
      {
        "x": 8,
        "y": 8,
        "z": 8,
      },
      {
        "x": 16,
        "y": 16,
        "z": 16,
      },
    ],
    "segmentGroups": [],
    "segments": [],
    "typ": "Volume",
    "userBoundingBoxes": [],
    "userStates": [],
    "volumeBucketDataHasChanged": false,
    "zoomLevel": 1,
  },
}
`;

exports[`Annotation API (E2E) > getTracingsForAnnotation() for volume 1`] = `
{
  "additionalAxes": [],
  "boundingBox": {
    "depth": 256,
    "height": 512,
    "topLeft": {
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "width": 512,
  },
  "createdTimestamp": "createdTimestamp",
  "editPosition": {
    "x": 256,
    "y": 256,
    "z": 128,
  },
  "editPositionAdditionalCoordinates": [],
  "editRotation": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "elementClass": "uint32",
  "hasSegmentIndex": true,
  "id": "id",
  "largestSegmentId": 0,
  "mags": [
    {
      "x": 1,
      "y": 1,
      "z": 1,
    },
    {
      "x": 2,
      "y": 2,
      "z": 2,
    },
    {
      "x": 4,
      "y": 4,
      "z": 4,
    },
    {
      "x": 8,
      "y": 8,
      "z": 8,
    },
    {
      "x": 16,
      "y": 16,
      "z": 16,
    },
  ],
  "segmentGroups": [],
  "segments": [],
  "typ": "Volume",
  "userBoundingBoxes": [],
  "userStates": [],
  "volumeBucketDataHasChanged": false,
  "zoomLevel": 1,
}
`;
